--- a/GithubUsers/app/src/main/res/values/colors.xml
+++ b/GithubUsers/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="label_text_color">@android:color/black</color>
+    <color name="info_text_color">@color/colorPrimary</color>
 </resources>
