--- a/GithubUsers/app/src/main/res/values/dimens.xml
+++ b/GithubUsers/app/src/main/res/values/dimens.xml
@@ -4,4 +4,7 @@
     <dimen name="medium_text">14sp</dimen>
     <dimen name="large_text">16sp</dimen>
     <dimen name="extra_large_text">24sp</dimen>
+    <dimen name="users_list_item_margin">5dp</dimen>
+    <dimen name="loading_spinner_width">50dp</dimen>
+    <dimen name="loading_spinner_height">50dp</dimen>
 </resources>
