--- a/GithubUsers/app/src/main/res/layout/activity_users_list.xml
+++ b/GithubUsers/app/src/main/res/layout/activity_users_list.xml
@@ -40,5 +40,17 @@
             android:visibility="@{viewModel.isLoadingUsers}"
             />
 
+        <Button
+            android:id="@+id/btnRetry"
+            android:text="@string/retry"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:visibility="@{viewModel.canRetry}"
+            android:onClick="onRetry"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
